# compiler

./: CMakeLists.txt  DFATable.txt  DFATable.xlsx  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Node.cpp  Node.h  README.md  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  compiler docs.pptx  main.cpp  ~$DFATable.xlsx
context-free grammar/: CFG.docx  ~$CFG.docx
docs/context-free grammar/: ~$CFG.docx
docs/regular expression/: DFATable.txt  DFATable.xlsx  mergedNFA.pptx
headers/: LexicalAnalyzer.h  Node.h  SemanticAnalyzer.h  SyntaxAnalyzer.h
regular expression/: DFATable.txt  DFATable.xlsx  NFA_DFA.pptx  mergedNFA.pptx  regular expression.docx  ~$mergedNFA.pptx
sources/: LexicalAnalyzer.cpp  Node.cpp  SemanticAnalyzer.cpp  SyntaxAnalyzer.cpp  main.cpp
